infra/images-depl.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: images-depl
spec:
  replicas: 1
  selector:
    matchLabels:
      app: images
  template:
    metadata:
      labels:
        app: images
    spec:
      containers:
        - name: images
          image: aniiencalada/images
