infra/search-depl.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: search-depl
spec:
  replicas: 1
  selector:
    matchLabels:
      app: search
  template:
    metadata:
      labels:
        app: search
    spec:
      containers:
        - name: search
          image: aniiencalada/search
