infra/images-srv.yml
apiVersion: v1
kind: Service
metadata:
  name: images-srv
spec:
  selector:
    app: images
  ports:
    - name: images
      protocol: TCP
      port: 8000
      targetPort: 8000
