infra/search-srv.yml
apiVersion: v1
kind: Service
metadata:
  name: search-srv
spec:
  selector:
    app: search
  ports:
    - name: search
      protocol: TCP
      port: 8000
      targetPort: 8000
